--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="src/Images/logo1.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pavion Technologies - Innovative Software Solutions</title>
     <meta name="description" content="Pavion Technologies - Empowering businesses with advanced technological solutions, AI, web development, and software engineering services.">
