--- a/index.html
+++ b/index.html
@@ -99,7 +99,23 @@
     </script>
 </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <!-- Initial loading state - replaced by React when it mounts -->
+      <div id="initial-loader" style="position: fixed; inset: 0; display: flex; align-items: center; justify-content: center; background: #0a0a0f; z-index: 9999;">
+        <div style="display: flex; flex-direction: column; align-items: center; gap: 16px;">
+          <div style="width: 40px; height: 40px; border: 3px solid rgba(99, 102, 241, 0.2); border-top-color: #6366f1; border-radius: 50%; animation: spin 1s linear infinite;"></div>
+          <span style="color: rgba(255,255,255,0.7); font-family: system-ui, -apple-system, sans-serif; font-size: 14px;">Loading...</span>
+        </div>
+      </div>
+      <style>
+        @keyframes spin {
+          to { transform: rotate(360deg); }
+        }
+        #initial-loader {
+          transition: opacity 0.3s ease-out;
+        }
+      </style>
+    </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
